sgleam-core-tests/tests/snapshots/integration__run_file@sgleam.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: cli/tests/inputs/sgleam.gleam
---
STDOUT

STDERR
Ignoring `/home/malbarbo/projetos/sgleam/cli/tests/inputs/sgleam.gleam`: `sgleam` is a reserved module name.
