sgleam-core-tests/tests/snapshots/integration__run_file@smain_alias.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: cli/tests/inputs/smain_alias.gleam
---
STDOUT

STDERR
