sgleam-core-tests/tests/snapshots/integration__run_images@above1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/above1.gleam
---
<svg width="70.0" height="80.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <path d="M 70.0 10.0 A 35.0 10.0 0.0 0 1 0.0 10.0 A 35.0 10.0 0.0 0 1 70.0 10.0 Z" fill="rgba(211, 211, 211, 1.0)" />
        <path d="M 60.0 30.0 A 25.0 10.0 0.0 0 1 10.0 30.0 A 25.0 10.0 0.0 0 1 60.0 30.0 Z" fill="rgba(169, 169, 169, 1.0)" />
      </g>
      <path d="M 50.0 50.0 A 15.0 10.0 0.0 0 1 20.0 50.0 A 15.0 10.0 0.0 0 1 50.0 50.0 Z" fill="rgba(105, 105, 105, 1.0)" />
    </g>
    <path d="M 40.0 70.0 A 5.0 10.0 0.0 0 1 30.0 70.0 A 5.0 10.0 0.0 0 1 40.0 70.0 Z" fill="rgba(0, 0, 0, 1.0)" />
  </g>
</svg>
