sgleam-core-tests/tests/snapshots/integration__run_images@above_align1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/above_align1.gleam
---
<svg width="70.0" height="80.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <path d="M 70.0 10.0 A 35.0 10.0 0.0 0 1 0.0 10.0 A 35.0 10.0 0.0 0 1 70.0 10.0 Z" fill="rgba(154, 205, 50, 1.0)" />
        <path d="M 70.0 30.0 A 25.0 10.0 0.0 0 1 20.0 30.0 A 25.0 10.0 0.0 0 1 70.0 30.0 Z" fill="rgba(107, 142, 35, 1.0)" />
      </g>
      <path d="M 70.0 50.0 A 15.0 10.0 0.0 0 1 40.0 50.0 A 15.0 10.0 0.0 0 1 70.0 50.0 Z" fill="rgba(85, 107, 47, 1.0)" />
    </g>
    <path d="M 70.0 70.0 A 5.0 10.0 0.0 0 1 60.0 70.0 A 5.0 10.0 0.0 0 1 70.0 70.0 Z" fill="rgba(0, 100, 0, 1.0)" />
  </g>
</svg>
